Fixed layout issues

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,25 +28,37 @@ body{
 }
 
 #home{
-  width:25%;
+  width:16.6%;
   height:100%;
   float:left;
 }
 
 #register{
-  width:25%;
+  width:16.6%;
   height:100%;
   float:left;
 }
 
 #contact{
-  width:25%;
+  width:10.6%;
   height:100%;  
   float:left;
 }
 
 #about{
-  width:25%;
+  width:16.6%;
+  height:100%;  
+  float:left;
+}
+
+#button{
+  width:16.6%;
+  height:100%;  
+  float:left;
+}
+
+#email{
+  width:22.6%;
   height:100%;  
   float:left;
 }
